--- a/generic_dashboard_client/src/main/webapp/index.html
+++ b/generic_dashboard_client/src/main/webapp/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <script language="javascript" type="text/javascript">
+         window.location.href="module_dashboard.html";
+        </script>
     </body>
 </html>
