--- a/generic_dashboard_client/src/main/webapp/module_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_dashboard.html
@@ -190,8 +190,8 @@
       $('#template-matrix-footer-div').load($.getRootPath() + '/components/footer.html');
 
       setTimeout(function() {
-        $('#navbar_search_li').css('display', '');
-        $('#navbar_title_li').text('[#Your Components Title#]');
+        // $('#navbar_search_li').css('display', '');
+        $('#navbar_title_li').text('Overview');
       }, 1000)
     });
     // UNIT_TEST_SUITE();
