--- a/generic_dashboard_client/src/main/webapp/module_gallery.html
+++ b/generic_dashboard_client/src/main/webapp/module_gallery.html
@@ -109,14 +109,14 @@
                     <div data-bind="with:businessPOJO().elements">
                       <!--ko foreach: viewData-->
                       <div class="col-xs-12" style="margin-bottom:18px;">
-                        <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){default_switch2detail_page($data,'/components/component_matrix_template_update.html','update','MATRIX_TEMPLATE_ADD')}}">
+                        <a class="card card-banner card-blue-light" data-bind="event:{dblclick:function(){redirect2editor($data)}}">
                           <div class="card-body">
                             <i class="icon fa fa-edit fa-4x"></i>
                             <div class="content">
                               <div class="title">
                                 <span data-bind="if:stringbeta">
                                 <!-- ko foreach: stringbeta.split(',') -->
-                                                  <span class="label label-info" data-bind="text:$data"></span> &nbsp;
+                                    <span class="label label-info" data-bind="text:$data"></span> &nbsp;
                                 <!-- /ko -->
                                 </span>
                                 <span data-bind="text:(function(){return new Date(parseInt(createtime)).toLocaleString()})()" style="margin-right: 8px;"></span>
