--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
@@ -19,6 +19,27 @@
   <link rel="stylesheet" type="text/css" href="assets/reference/fuelux/fuelux.min.css">
   <link rel="stylesheet" type="text/css" href="assets/reference/gridstack/gridstack.css" />
   <link rel="stylesheet" type="text/css" href="assets/reference/gridstack/gridstack-extra.css" />
+  <style>
+    .grid-stack-item-content {
+      background: white;
+      color: #2c3e50;
+    }
+
+    header a,
+    header a:hover {
+      color: #fff;
+    }
+
+    .dragContainer {
+      background: -webkit-linear-gradient(top, transparent 59px, white 60px), -webkit-linear-gradient(left, #888 59px, white 60px);
+      background-size: 60px 60px;
+      color: #fff;
+    }
+
+    .dragContainer hr.star-light::after {
+      background-color: #2c3e50;
+    }
+  </style>
 </head>
 
 <body>
@@ -81,7 +102,71 @@
       <!--VALIDATION DIV FINISHED-->
 
       <!--BUSINESS DIV BEGIN-->
+      <div class="row" id="menubar_div" style="position:fixed;top:118px;left: 180px;right: 0px;z-index:100006">
 
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 0px;">
+          <div class="card card-mini">
+            <div class="card-header">
+              <div class="card-title">
+                <i class="fa fa-diamond">&nbsp;Editor&nbsp;&nbsp;&nbsp;</i>
+                <button title="New(alt+shift+n)" type="button" onclick="ModalUtil.popup_modal('New Dashboard Kit', '/assets/self-owned/html/dashboard/modal_content_new.html', null, null, null);" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-edit"></i></button>
+                <button title="View Grid(alt+shift+v)" type="button" onclick="add_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye"></i></button>
+                <button title="Unview Grid(alt+shift+u)" type="button" onclick="remove_css_class('dragContainer_div', 'dragContainer')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-eye-slash"></i></button>
+                <button title="View Header" type="button" onclick="$('.grid-stack-item-header').css('display','')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bell-o"></i></button>
+                <button title="Unview Header" type="button" onclick="$('.grid-stack-item-header').css('display','none')" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bell-slash-o"></i></button>
+                <button id="button_save" title="Save(alt+shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
+                <button title="Insert a chart cell(alt+shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
+                <button title="Refresh(alt+shift+r)" type="button" onclick="refresh_workbench()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-refresh"></i></button>
+                <!-- <span class="pull-right" style="margin-right:18px">
+                  <button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:hasNewContent">Modified</button>
+                  <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!name()">Unsaved</button>
+                  <button type="button" class="btn btn-success" style="padding: 6px 12px;margin-bottom: 0px;display:" data-bind="visible:name()">Saved as: <span data-bind="text:name"></span></button>
+                </span> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="report_content_seperate_div" class="seperate_div_class" style="margin-top:110px"></div>
+
+      <div class="row">
+        <div class="col-md-12" style="margin-top:0px">
+          <div class="dragContainer" id='dragContainer_div'>
+            <div id="workbench_div" style="padding:0px 0px;min-height:760px">
+              <div class="grid-stack" data-gs-width="12" data-gs-animate="yes" style="margin:0px -9px">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Matrix Dashboard Grid Template Begin -->
+      <div style="display:none">
+        <div class="grid-stack-item-content" id='draggableTemplate'>
+          <div class="card card-mini" style="box-shadow: none;height:90%;overflow-y: hidden">
+            <div class="card-header grid-stack-item-header" style="padding: 8px 0px 0px 16px;">
+              <div class="card-title">
+                <i class="fa fa-plug">&nbsp;Drag Item&nbsp;</i>
+                <span class="pull-right" style="margin-right:18px">
+                    <button type="button" class=" btn btn-default btn-xs pull-right remove-drag" title="" style="border-color: #fff;">
+                      <div class="title"><i class="fa fa-remove"></i></div>
+                    </button>
+                    <button type="button" class=" btn btn-default btn-xs pull-right lock-drag" title="" style="border-color: #fff;">
+                      <div class="title"><i class="fa fa-unlock"></i></div>
+                    </button>
+                    <button type="button" class=" btn btn-default btn-xs pull-right unlock-drag" title="" style="border-color: #fff;display:none">
+                      <div class="title"><i class="fa fa-lock"></i></div>
+                    </button>
+                    </span>
+              </div>
+            </div>
+            <div class="card-body" style="height:100%">
+              <div class="draggableTemplateContext" style="height:100%"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Matrix Dashboard Grid Template End -->
       <!--BUSINESS DIV FINISHED-->
 
 
