--- a/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
+++ b/generic_dashboard_client/src/main/webapp/module_kit_dashboard.html
@@ -117,11 +117,11 @@
                 <button id="button_save" title="Save(alt+shift+s)" type="button" onclick="ModalUtil.popup_modal('Save Dashboard', '/assets/self-owned/html/dashboard/modal_content_save.html');" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-save"></i></button>
                 <button title="Insert a chart cell(alt+shift+e)" onclick="ModalUtil.popup_modal('Insert a new chart', '/assets/self-owned/html/dashboard/modal_content_insert_chart.html', null, null, null);" type="button" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-bar-chart"></i></button>
                 <button title="Refresh(alt+shift+r)" type="button" onclick="refresh_workbench()" class="btn btn-default" style="padding: 6px 12px;margin-bottom: 0px;"><i class="fa fa-refresh"></i></button>
-                <!-- <span class="pull-right" style="margin-right:18px">
-                  <button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:hasNewContent">Modified</button>
-                  <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!name()">Unsaved</button>
-                  <button type="button" class="btn btn-success" style="padding: 6px 12px;margin-bottom: 0px;display:" data-bind="visible:name()">Saved as: <span data-bind="text:name"></span></button>
-                </span> -->
+                <span class="pull-right" style="margin-right:18px" data-bind="if:vm.businessPOJO()">
+                  <button type="button" class="btn btn-warning" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:vm.businessPOJO().hasNewContent">Modified</button>
+                  <button type="button" class="btn btn-danger" style="padding: 6px 12px;margin-bottom: 0px;display:none" data-bind="visible:!vm.businessPOJO().name()">Unsaved</button>
+                  <button type="button" class="btn btn-success" style="padding: 6px 12px;margin-bottom: 0px;display:" data-bind="visible:vm.businessPOJO().name()">Saved as: <span data-bind="text:vm.businessPOJO().name"></span></button>
+                </span>
               </div>
             </div>
           </div>
