up-to-oda时给booleangamma置默认值为false

--- a/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
+++ b/generic_report_client/src/main/webapp/assets/self-owned/html/report/modal_to_oda.html
@@ -157,6 +157,7 @@
           "id":ModalUtil.businessPOJO.data.id,
           "booleanalpha": true,
           "booleanbeta":false,
+          "booleangamma":false,
           "codejson":codejson
         }
     };
